--- a/Website/index.html
+++ b/Website/index.html
@@ -70,7 +70,7 @@
 							<div class="display-tc">
 								<div class="row">
 									<div class="col-md-5 text-center header-img animate-box">
-										<img src="images/cube.png" alt="Free HTML5 Website Template by FreeHTML5.co">
+										<img src="images/football.png" alt="Free HTML5 Website Template by FreeHTML5.co" width="256">
 									</div>
 									<div class="col-md-7 copy animate-box">
 										<h1>NFL Twitter Net</h1>
@@ -134,8 +134,8 @@
 							</div>
 
 			<div class="row">
-					<div class="col-md-10 text-center">
-										<p>These graphs show the loss and accuracy over the training and validation sets for the best tuned models we could come up with for both the statistic and twitter nets. The twitter net was able to learn much faster, as the loss and accuracy both converged at around 300 training steps. The stats net took longer to learn but got to better loss and accuracy values in the end. When ran over our test set, the twitter and stats net had 65.9% and 60% accuracy respectively</p>
+					<div class="col-md-11 text-center">
+										<p>These graphs show the loss and accuracy over the training and validation sets for the best tuned models we could come up with for both the statistic and twitter nets. The twitter net was able to learn much faster, as the loss and accuracy both converged at around 300 training steps. The stats net took longer to learn but got to better loss and accuracy values in the end on the test and validation sets. When we ran over our test set, the twitter and stats net had 65.9% and 60% accuracy respectively. We believe that this is due to the twitter net being able to better generalize results as 3 years of football games is only 672 total examples and it is likely that the stats net was overfit to the training data. This means that the twitter net beats the 63.8% accuracy of the paper we got our inspiration from and is close to the average accuracy of the very best nets for the same three year period (69% via the predictiontracker.com)</p>
 									</div>
 									
 							</div>
@@ -156,8 +156,8 @@
 						<p><a href="https://github.com/Deep-Learners-of-Tomorrow/Predicting-NFL-Games-Using-Twitter" class="btn btn-white btn-outline">Link to our Github</a></p>
 					</div>
 					<div class="col-md-4 col-md-offset-1 gtco-cta text-center">
-						<h3>Want to Learn More</h3>
-						<p><a href="https://github.com/aleonardi33/EECS352_STATM" class="btn btn-white btn-outline">Link to our Paper</a></p>
+						<h3>Learn More</h3>
+						<p><a href="https://github.com/Deep-Learners-of-Tomorrow/Predicting-NFL-Games-Using-Twitter/paper.pdf" class="btn btn-white btn-outline">Link to our Paper</a></p>
 					</div>
 				</div>
 				
