--- a/Website/index.html
+++ b/Website/index.html
@@ -78,7 +78,7 @@
 										<p>Created for an EECS 396 intro to Deep Learning final project at Northwestern University.</p>
 										<p>Developers: Kobe Mandell, and Charlie Stanier </p>
 										<p>Contact Info: charlesstanier2021@u.northwestern.edu</p>
-										<p>Instructor: Brian Pardo </p>
+										<p>Instructor: Bryan Pardo </p>
 									</div>
 								</div>
 							</div>
